--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Select Boxes</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/scripts.js" defer></script>
 </head>
 <body>
 
