--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <script src="js/scripts.js" defer></script>
 </head>
 <body>
-
+  <div class="container">
+    <form id="survey">
+      <div class="form-group">
+        <label for="name">What's your name?</label>
+        <input id="name" class="form-control" type="text" required>
+      </div>
+    </form>
+    <div class="info">
+      <p>Your name is <span id="outputInput"></span></p>
+    </div>
+  </div>
 </body>
 </html>
