--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <label for="name">What's your name?</label>
         <input id="name" class="form-control" type="text" required>
       </div>
+      <button class="btn btn-inverse" type="submit">Submit!</button>
     </form>
     <div class="info">
       <p>Your name is <span id="outputInput"></span></p>
