--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
         <label for="name">What's your name?</label>
         <input id="name" class="form-control" type="text" required>
       </div>
+
+      <div class="form-group">
+        <label for="beverage">Which beverage do you like?</label>
+        <select id="beverage" class="form-control">
+          <option>Cofee</option>
+          <option>Tea</option>
+          <option>Kombucha</option>
+          <option>Water</option>
+        </select>
+      </div>
       <button class="btn btn-inverse" type="submit">Submit!</button>
     </form>
     <div class="info">
       <p>Your name is <span id="outputInput"></span></p>
+      <p>One of your favorite beverages is <span id="outputSelect"></span></p>
     </div>
   </div>
 </body>
