Add date input and p

--- a/index.html
+++ b/index.html
@@ -46,12 +46,19 @@
           Cookies &amp; Cream
         </label>
       </div>
+
+      <div class="form-group">
+        <label for="born">What's your date of birth: </label>
+        <input id="born" class="form-control" type="date" required>
+      </div>
+
       <button class="btn btn-inverse" type="submit">Submit!</button>
     </form>
     <div class="info">
       <p>Your name is <span id="outputInput"></span></p>
       <p>One of your favorite beverages is <span id="outputSelect"></span></p>
       <p>You like <span id="outputRadio"></span> ice cream</p>
+      <p>Your date of birth is <span id="outputDob"></span></p>
     </div>
   </div>
 </body>
