--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <input id="born" class="form-control" type="date" required>
       </div>
 
+      <div class="form-group">
+        <label for="color">What's your favorite color?</label>
+        <input id="color" class="form-control" type="color">
+      </div>
       <button class="btn btn-inverse" type="submit">Submit!</button>
     </form>
     <div class="info">
@@ -59,6 +63,7 @@
       <p>One of your favorite beverages is <span id="outputSelect"></span></p>
       <p>You like <span id="outputRadio"></span> ice cream</p>
       <p>Your date of birth is <span id="outputDob"></span></p>
+      <p>your favorite color in hexidecimal code is <span id="outputColor"></span></p>
     </div>
   </div>
 </body>
