--- a/index.html
+++ b/index.html
@@ -12,51 +12,53 @@
 </head>
 <body>
   <div class="container">
+    <h1>Form Types</h1>
+
     <form id="survey">
+      <!-- text input -->
       <div class="form-group">
         <label for="name">What's your name?</label>
         <input id="name" class="form-control" type="text" required>
       </div>
 
+      <!-- select input -->
       <div class="form-group">
         <label for="beverage">Which beverage do you like?</label>
         <select id="beverage" class="form-control">
-          <option>Cofee</option>
+          <option>Coffee</option>
           <option>Tea</option>
           <option>Kombucha</option>
           <option>Water</option>
         </select>
       </div>
-      
+
       <p><strong>Which ice cream flavor do you like?</strong></p>
+      <!-- radio input -->
       <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="flavor" id="flavor" value="strawberry shortcake" checked>
-          Strawberry Shortcake
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="flavor" id="flavor" value="chocolate">
-          Chocolate
-        </label>
-      </div>
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="radio" name="flavor" id="flavor" value="cookies and cream">
-          Cookies &amp; Cream
-        </label>
+        <input class="form-check-input" id="flavor1" name="flavor" type="radio" value="strawberry shortcake" checked>
+        <label class="form-check-label" for="flavor1">Strawberry Shortcake</label>
       </div>
 
+      <div class="form-check">
+        <input class="form-check-input" id="flavor2" name="flavor" type="radio" value="chocolate">
+        <label class="form-check-label" for="flavor2">Chocolate</label>
+      </div>
+
+      <div class="form-check">
+        <input class="form-check-input" id="flavor3" name="flavor" type="radio" value="cookies and cream">
+        <label class="form-check-label" for="flavor3">Cookies &amp; Cream</label>
+      </div>
+      <!-- date input -->
       <div class="form-group">
         <label for="born">What's your date of birth: </label>
         <input id="born" class="form-control" type="date" required>
       </div>
-
+      <!-- color input -->
       <div class="form-group">
         <label for="color">What's your favorite color?</label>
         <input id="color" class="form-control" type="color">
       </div>
+      <!-- submit button -->
       <button class="btn btn-inverse" type="submit">Submit!</button>
     </form>
 
