--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Form Types</h1>
+    <h1>Select Boxes</h1>
+    <p>A survey to input data and get back data inputted</p>
 
     <form id="survey">
       <!-- text input -->
